--- a/PanelProject/App.xaml
+++ b/PanelProject/App.xaml
@@ -325,14 +325,19 @@
         <Style x:Key="MainWindowButton" TargetType="{x:Type Button}">
             <Style.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10" />
+                    <Setter Property="CornerRadius" Value="6" />
+                    
                 </Style>
             </Style.Resources>
             <Setter Property="Margin" Value="10"/>
             <Setter Property="Padding" Value="10,5"/>
             <Setter Property="Height" Value="50"/>
-            <Setter Property="Width" Value="200"/>
+            <Setter Property="Width" Value="285"/>
             <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="BorderThickness" Value="3"/>
+            <Setter Property="BorderBrush" Value="Gray"/>
         </Style>
 
         <Style x:Key="PanelLabel" TargetType="{x:Type Label}">
@@ -359,7 +364,7 @@
             <Setter Property="StrokeThickness" Value="1"/>
         </Style>
 
-        <Style x:Key="RoundLampWithRing" TargetType="{x:Type Button}">
+        <Style x:Key="RoundLampWithRingOn" TargetType="{x:Type Button}">
 
             <Setter Property="Width" Value="23"/>
             <Setter Property="Height" Value="23"/>
@@ -372,6 +377,25 @@
                         <Canvas Height="23" Width="23">
                             <Ellipse Fill="Red" Height="23" Width="23" StrokeThickness="1" Stroke="Black"/>
                             <Ellipse Fill="Red" Height="12" Width="12" StrokeThickness="2" Stroke="White" Canvas.Left="5.5" Canvas.Top="5.5"/>
+                        </Canvas>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+        </Style>
+
+        <Style x:Key="RoundLampWithRingOff" TargetType="{x:Type Button}">
+
+            <Setter Property="Width" Value="23"/>
+            <Setter Property="Height" Value="23"/>
+            <Setter Property="IsEnabled" Value="False"/>
+
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Canvas Height="23" Width="23">
+                            <Ellipse Fill="Red" Height="23" Width="23" StrokeThickness="1" Stroke="Black"/>
                         </Canvas>
                     </ControlTemplate>
                 </Setter.Value>
