--- a/PanelProject/MainWindow.xaml
+++ b/PanelProject/MainWindow.xaml
@@ -5,20 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PanelProject"
         mc:Ignorable="d"
-        Title="Тренажёр" Height="450" Width="800">
+        Title="Тренажёр" Height="448" Width="629" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1">
-            <Button x:Name="button1" Content="Вариант запуска №1" Style="{StaticResource MainWindowButton}" Click="button1_Click"/>
-            <Button x:Name="button2" Content="Вариант запуска №2" Style="{StaticResource MainWindowButton}" Click="button2_Click" />
-            <Button x:Name="button3" Content="Вариант запуска №3" Style="{StaticResource MainWindowButton}" Click="button3_Click"/>
+        <Image Grid.ColumnSpan="1" Grid.RowSpan="3" Source="images/background.jpg"/>
+        <Label Content="ТРЕНАЖЁР СИСТЕМЫ ЭЛЕКТРОПИТАНИЯ АППАРАТНОГО" Grid.Row="0" Style="{StaticResource PanelLabel}" FontSize="20"/>
+        <Label Content="КОНТЕЙНЕРА Н2А" Grid.Row="1" Style="{StaticResource PanelLabel}" FontSize="20"/>
+
+
+        <StackPanel HorizontalAlignment="Center" Grid.Row="2" Width="350" Margin="0,50,0,0">
+            <Button x:Name="button1" Content="Питание от промышленной сети" Style="{StaticResource MainWindowButton}" Click="button1_Click"/>
+            <Button x:Name="button2" Content="Питание от ДЭС" Style="{StaticResource MainWindowButton}" Click="button2_Click" />
+            <Button x:Name="button3" Content="Питание от ГУ" Style="{StaticResource MainWindowButton}" Click="button3_Click"/>
         </StackPanel>
     </Grid>
 </Window>
