--- a/PanelProject/App.xaml
+++ b/PanelProject/App.xaml
@@ -364,6 +364,15 @@
             <Setter Property="StrokeThickness" Value="1"/>
         </Style>
 
+        <Style x:Key="RoundGreenLampOffGreen" TargetType="{x:Type Ellipse}">
+            <Setter Property="Width" Value="10"/>
+            <Setter Property="Height" Value="10"/>
+            <Setter Property="Fill" Value="DarkGreen"/>
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="Stroke" Value="Black"/>
+            <Setter Property="StrokeThickness" Value="1"/>
+        </Style>
+
         <Style x:Key="RoundLampWithRingOn" TargetType="{x:Type Button}">
 
             <Setter Property="Width" Value="23"/>
